crates/analyzer/tests/snapshots/errors__indexed_event.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, &src)"

---
error: more than three indexed fields in `event MyEvent`
  ┌─ compile_errors/indexed_event.fe:3:9
  │
3 │         idx addr1: address
  │         ^^^^^^^^^^^^^^^^^^
4 │         idx addr2: address
  │         ^^^^^^^^^^^^^^^^^^
5 │         idx addr3: address
  │         ^^^^^^^^^^^^^^^^^^
6 │         idx addr4: address
  │         ^^^^^^^^^^^^^^^^^^ 4 indexed fields
  │
  = Note: Remove the `idx` keyword from at least 1 field.


